tests/errors/compiler/wrong_printf_param_type/char.c
void main() 
{
    int x = 3;
    char str[1];
    str[0] = 'Ğ­';
    printf("int = %i str = %c", x, str);
}
